yaml/logging/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  labels:
    name: elk
    app: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elk
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elk
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9114"
        #prometheus.io/port: "9108"
    spec:
      containers:
        - name: elasticsearch
          image: szpaczyn/elasticsearch-arm64:v7.9.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/jvm.options
              subPath: jvm.options
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          workingDir: /usr/share/elasticsearch/data
          ports:
            - containerPort: 9200
              protocol: TCP
              name: elasticsearch
            - containerPort: 9300
              protocol: TCP
              name: morphine
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 256Mi
        - name: exporter
          command:
          - /bin/elasticsearch_exporter
          - --es.uri=http://elk-svc-elasticsearch:9200
          - --es.timeout=60s
          - --es.all
          - --es.indices
          - --es.shards
          image: szpaczyn/elasticsearch_exporter-arm64:v1.1.1"
          imagePullPolicy: Always
          ports:
          - name: metrics
            containerPort: 9114
          readinessProbe:
            httpGet:
              path: /health
              port: 9114
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 9114
            initialDelaySeconds: 30
            timeoutSeconds: 10
        - name: logstash
          image: szpaczyn/logstash-arm64:v7.9.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5044
              protocol: TCP
              name: filebeat-pihole
            - containerPort: 5045
              protocol: TCP
              name: filebeat-sshd
            - containerPort: 9600
              protocol: TCP
              name: logstash
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 256Mi
          volumeMounts:
            - name: logstash-config
              mountPath: /etc/logstash/logstash.yml
              subPath: logstash.yml
            - name: logstash-config
              mountPath: /etc/logstash/pipelines.yml
              subPath: pipelines.yml
            - name: logstash-config
              mountPath: /etc/logstash/jvm.options
              subPath: jvm.options
            - name: logstash-config
              mountPath: /etc/logstash/log4j2.properties
              subPath: log4j2.properties
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/10-pihole.conf
              subPath: 10-pihole.conf
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/20-auth.conf
              subPath: 20-auth.conf
            - name: logstash-config
              mountPath: /etc/logstash/patterns/dns.grok
              subPath: dns
            - name: logstash-config
              mountPath: /etc/logstash/patterns/auth.grok
              subPath: auth
        - name: kibana
          image: szpaczyn/kibana-arm64:v7.9.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5601
              protocol: TCP
              name: kibana
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 256Mi
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      terminationGracePeriodSeconds: 5
      volumes:
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elk-data-01
      - name: kibana-data
        persistentVolumeClaim:
          claimName: elk-data-02
      - name: kibana-config
        configMap:
          name: kibana-config
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
      - name: logstash-config
        configMap:
          name: logstash-config
      nodeSelector:
        kubernetes.io/role: worker
        disktype: external
      tolerations:
        - effect: NoSchedule
          operator: Exists
