yaml/logging/09-logstash-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app.kubernetes.io/name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: logstash
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: logstash
    spec:
      containers:
        - name: logstash
          image: szpaczyn/logstash-arm64:v7.9.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5044
              protocol: TCP
              name: filebeat-pihole
            - containerPort: 5045
              protocol: TCP
              name: filebeat-sshd
            - containerPort: 9600
              protocol: TCP
              name: logstash
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 256Mi
          volumeMounts:
            - name: logstash-config
              mountPath: /etc/logstash/logstash.yml
              subPath: logstash.yml
            - name: logstash-config
              mountPath: /etc/logstash/pipelines.yml
              subPath: pipelines.yml
            - name: logstash-config
              mountPath: /etc/logstash/jvm.options
              subPath: jvm.options
            - name: logstash-config
              mountPath: /etc/logstash/log4j2.properties
              subPath: log4j2.properties
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/10-pihole.conf
              subPath: 10-pihole.conf
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/20-auth.conf
              subPath: 20-auth.conf
            - name: logstash-config
              mountPath: /etc/logstash/patterns/dns.grok
              subPath: dns
            - name: logstash-config
              mountPath: /etc/logstash/patterns/auth.grok
              subPath: auth
      terminationGracePeriodSeconds: 5
      volumes:
      - name: logstash-config
        configMap:
          name: logstash-config
      nodeSelector:
        kubernetes.io/role: worker
      tolerations:
        - effect: NoSchedule
          operator: Exists
