yaml/logging/05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: kibana-auth
spec:
  ingressClassName: traefik-lb
  rules:
  - host: kibana.shpaq.org
    http:
      paths:
      - backend:
          service:
            name: elk-svc-kibana
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - secretName: kibana-shpaq-org-tls
    hosts:
      - kibana.shpaq.org
